RESOLVED FIXED231559
Fix spec-correctness when inlining __proto__ intrinsic using get_by_id_with_this
https://bugs.webkit.org/show_bug.cgi?id=231559
Summary Fix spec-correctness when inlining __proto__ intrinsic using get_by_id_with_this
Saam Barati
Reported 2021-10-11 23:25:52 PDT
Attachments
patch (6.17 KB, patch)
2021-10-12 11:37 PDT, Saam Barati
no flags
Saam Barati
Comment 1 2021-10-12 11:37:42 PDT
Yusuke Suzuki
Comment 2 2021-10-12 11:40:00 PDT
Comment on attachment 440965 [details] patch r=me
EWS
Comment 3 2021-10-12 14:51:42 PDT
Committed r284036 (242866@main): <https://commits.webkit.org/242866@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 440965 [details].
Radar WebKit Bug Importer
Comment 4 2021-10-12 14:52:33 PDT
Note You need to log in before you can comment on or make changes to this bug.